--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               your financial goal.
             </p>
             <img
-              src="./images/Client1.png"
+              src="./images/Client2.png"
               alt="Wahid Ari"
               width="50"
               height="50"
@@ -48,7 +48,7 @@
               your financial goal.
             </p>
             <img
-              src="./images/Client1.png"
+              src="./images/Client3.png"
               alt="Wahid Ari"
               width="50"
               height="50"
@@ -58,6 +58,23 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Join 100 Compannies who boost their business with Product</h2>
+        <img src="./images/screen.png" alt="screen" />
+        <button type="button">Get This</button>
+      </section>
     </main>
+    <footer>
+      <a href="./index.html"
+        ><img src="./images/logo.png" alt="logo" />Product</a
+      >
+      <p>Resource</p>
+      <ul>
+        <li>About Us</li>
+        <li>Blog</li>
+        <li>Contact</li>
+        <li>FAQ</li>
+      </ul>
+    </footer>
   </body>
 </html>
